@@ -5,6 +5,9 @@ Changelog
 2.4.2 (unreleased)
 ------------------
 
+- Handle missing OGDS user in AdminUnit.is_user_assigned().
+  [lgraf]
+
 - Add optimized method for checking if a user is assigned to an `AdminUnit`.
   [buchi]
 
